<resources>
    <string name="app_name">巫山小视频</string>
    <string name="navigation_home">主页</string>
    <string name="navigation_tag">标签</string>
    <string name="navigation_instant">发现好片</string>
    <string name="navigation_me">我的</string>
    <string name="welcome">欢迎来到巫山小视频 ~ 请注册或者登录</string>
    <string name="button_login_register">注册/登录</string>
    <string name="lishi">历史记录</string>
    <string name="richeng">日程</string>
    <string name="xiazai">下载管理</string>
    <string name="shoucang">我的收藏</string>
    <string name="shezhi">设置</string>
    <string name="guanyu">关于/分享</string>
    <string name="zhanghao">请输入账号</string>
    <string name="mima">请输入密码</string>
    <string name="confirm">请确认密码</string>
    <string name="username_hint">账号（6–16个字符，不建议使用手机号）</string>
    <string name="password_hint">密码（6–16个字符）</string>
    <string name="nickname_hint">昵称（可选，小于16字符）</string>
    <string name="gender">性别</string>
    <string name="register">注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="zhucebiaoshi">注册即表示已满18岁并同意</string>
    <string name="yonghuxieyi">用户协议</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="ok">OK</string>
    <string name="username_exists">账号已存在</string>
    <string name="profile">账号</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">播放设置</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">开启超时提醒</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile_info">账号信息</string>
    <string name="nickname">昵称</string>
    <string name="register_time">注册时间</string>
    <string name="last_login_time">最近登录</string>
    <string name="click_to_set">（点击修改）</string>
    <string name="logout">退出登录</string>
    <string name="age">年龄</string>
    <string name="zero">0</string>
    <string name="orientation">性取向</string>
    <string name="straight">直</string>
    <string name="click_to_show">（点击查看）</string>
    <string name="cancel">取消</string>
    <string name="search">搜索121万+视频</string>
    <string name="search_rank">默认排序</string>
    <string name="search_all_duration">全部时长</string>
    <string name="click_to_show_left">查看如何增加次数</string>
    <string name="collect_video">收藏视频</string>
    <string name="new_dir">新建收藏夹</string>
    <string name="zhunquemingming">输入收藏夹名称</string>
    <string name="play_list">视频收藏夹</string>
    <string name="share">分享</string>
    <string name="collected">已收藏</string>
    <string name="comment_time">评论时间</string>
    <string name="hot_comment">热门评论</string>
    <string name="publish_comment">发条友善的评论</string>
    <string name="publish">发表</string>
    <string name="comment_empty">快发表视频的第一个评论吧~</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="search_tag">搜索感兴趣的标签</string>
    <string name="history_list">历史记录</string>
    <string name="edit">编辑</string>
    <string name="like">喜欢</string>
    <string name="watch_later">稍后观看</string>
    <string name="collect">收藏</string>
    <string name="download">下载</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">已下载</string>
    <string name="detail">详情页</string>
    <string name="dislike">不喜欢</string>
    <string name="jianshaotuijian">不感兴趣，将减少类似视频推荐</string>
    <string name="undo">撤销</string>
    <string name="default_rank">默认排序</string>
    <string name="rank_play">播放多</string>
    <string name="rank_comment">评论多</string>
    <string name="rank_time">时间长</string>
    <string name="rank_degree">评分高</string>
    <string name="rank_collect">收藏多</string>
    <string name="rank_download">下载多</string>
    <string name="duration_all">所有时长</string>
    <string name="tag_filter">标签筛选</string>
    <string name="statistics">统计</string>
    <string name="rank">排序</string>
    <string name="me_like">我喜欢的</string>
    <string name="home_page">个人主页</string>
    <string name="notification">通知</string>
    <string name="my_create">我创建的</string>
    <string name="my_collect">我收藏的</string>
    <string name="add_to_new">添加到新收藏夹</string>
    <string name="play">播放</string>
    <string name="privacy">隐私</string>
    <string name="protocol">用户协议</string>
</resources>