<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/tagColor">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/zhanghao"
            android:scaleType="centerInside"
            android:src="@drawable/wode_26bdbb" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="textVisiblePassword"
            android:lines="1"
            android:maxLength="16"
            android:textSize="13sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/tagColor">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/mima"
            android:scaleType="centerInside"
            android:src="@drawable/mima" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textSize="13sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/tagColor">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:enabled="false"
            android:text="@string/login" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/login_forgot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/forgot_password" />
    </FrameLayout>
</LinearLayout>