<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/popup"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/rank_default"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/buttonClickColor"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/default_rank"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/rank_play"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/play_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/rank_play"
            android:textColor="@color/tabColor"
            android:textSize="13sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/rank_collect"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/collect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/rank_collect"
            android:textColor="@color/tabColor"
            android:textSize="13sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/rank_download"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/download_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/rank_download"
            android:textColor="@color/tabColor"
            android:textSize="13sp" />
    </FrameLayout>
</LinearLayout>