<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="26dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="25dp"
                app:cardBackgroundColor="@color/tagColor"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:contentDescription="搜索按钮"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/search" />

                <EditText
                    android:id="@+id/search_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="0dp"
                    android:autofillHints="no"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="6dp"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textSize="15sp" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_rank_button"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/search_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:text="@string/search_rank"
                    android:textColor="@color/tabColor"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/search_rank_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/down"
                    app:layout_constraintBottom_toBottomOf="@id/search_rank"
                    app:layout_constraintStart_toEndOf="@id/search_rank"
                    app:layout_constraintTop_toTopOf="@id/search_rank" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_duration_button"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/search_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:text="@string/search_all_duration"
                    android:textColor="@color/tabColor"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/search_duration_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/down"
                    app:layout_constraintBottom_toBottomOf="@id/search_duration"
                    app:layout_constraintStart_toEndOf="@id/search_duration"
                    app:layout_constraintTop_toTopOf="@id/search_duration" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>